Bug 87551 - UI VIEWING: The left field in the Options window is show not correct: text does not fit
Summary: UI VIEWING: The left field in the Options window is show not correct: text do...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.1 rc
Hardware: x86 (IA32) All
: medium normal
Assignee: Adolfo Jayme Barrientos
URL:
Whiteboard: target:4.5.0 target:4.4.1 target:4.4.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-12-21 12:44 UTC by tagezi
Modified: 2015-01-16 09:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
the screenshot of the Options window (72.56 KB, image/png)
2014-12-21 12:44 UTC, tagezi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tagezi 2014-12-21 12:44:40 UTC
Created attachment 111107 [details]
the screenshot of the Options window

OS:
Kubuntu 14.04.1 x86

Problem description: If you look at the screenshot, you can see that words do not fit into the left field of Options window (Tools -> Options...) in Russian localisation. Also it is in EN localisation.
It is not in 4.3.5 version.
Comment 2 Cor Nouws 2014-12-21 13:26:22 UTC
Comment on attachment 111107 [details]
the screenshot of the Options window

set proper mime type
Comment 3 Cor Nouws 2014-12-21 13:32:11 UTC
I see the same for Dutch in 4.2.x when there is a long text in left pane.
(I have that when I adapt the product name from "LibreOffice" to "LibreOffice version bla bla" in the share/registry/main.xcd node ooname - not for dummies ;) )
So I'm not sure if I can confirm the problem..
Comment 4 tagezi 2014-12-21 14:57:40 UTC
There was no such problem until the version 4.4.0. I know that forms have been translated into GTK+, and this is evident from the behavior. But in version 4.3.5 the window is comfortable.
http://storage8.static.itmages.ru/i/14/1221/h_1419169168_6264975_eb1624e685.png

And I see no reason to make it uncomfortable.
Comment 5 Adolfo Jayme Barrientos 2014-12-21 17:32:32 UTC
(In reply to Lera from comment #4)
> And I see no reason to make it uncomfortable.

*rolls eyes*

Лера, no bugs are introduced on purpose, to pester your life. Having said that, I’m assigning this to myself.
Comment 6 Commit Notification 2015-01-13 11:19:01 UTC
Adolfo Jayme Barrientos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43fa2bcfecec0d1b7df3382cd69858bab4ffbca8

fdo#87551 Category tree is too thin since conversion to .ui

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-01-13 11:31:20 UTC
its probably better to use set_width_request(approximate_char_width() * nChars)) instead of using pixels in the .ui (ideally the .ui would have a char width measurement, but it doesn't) because the 240 pixel width won't "scale" with larger fonts
Comment 8 Commit Notification 2015-01-15 11:29:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0546e652adadeb47997306380d427ac16ab17608

Related: fdo#87551 measure in approx chars and not pixels

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-01-16 09:10:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2ad3d8af0f8217ba7d472630a297812d8a62b67&h=libreoffice-4-4

fdo#87551 Category tree is too thin since conversion to .ui

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-01-16 09:12:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e340f367cca07422fb415696fb729b43db221530&h=libreoffice-4-4-0

fdo#87551 Category tree is too thin since conversion to .ui

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jan Holesovsky 2015-01-16 09:16:42 UTC
Lera: Thanks so much for the report - it will be fixed in the (final) 4.4.0.