fdo#87551 Category tree is too thin since conversion to .ui

Measure in approx chars and not pixels.

Change-Id: Ibf34083d99e0aceee2855ed10939ad3b60b8abae
Reviewed-on: https://gerrit.libreoffice.org/13948
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>